# fastapi-resource-server

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
examples/: example.py
src/: fastapi_resource_server.py
tests/: test_fastapi_resource_server.py
