[tool.poetry]
name = "fastapi-resource-server"
version = "0.1.2"
description = "Build resource servers with FastAPI"
authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/livioribeiro/fastapi-resource-server"
keywords = [ "fastapi", "authentication", "oidc", "openidconnect" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
]
packages = [
    { include = "*", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6.2"
fastapi = "^0"
python-jose = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.12.0"
pytest-mock = "^3.6.1"
black = "^21.5b1"
flake8 = "^3.9.2"
mypy = "^0.812"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
